--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.2",
     "nodemon": "^1.17.3"
   },
   "dependencies": {
