--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "nodemon": "nodemon",
     "test": "jest",
     "babel-node": "babel-node",
-    "flow": "flow",
-    "flow-typed": "flow-typed",
-    "start": "babel-node ./src/bin/slack.js",
-    "eslint": "eslint",
+    "start": "babel-node ./server/bin/slack.js",
+    "eslint": "eslint .",
     "webpack": "webpack",
     "build-server": "babel server --out-dir dist --source-maps inline",
     "build-app": "npm run webpack -- -p --env production",
