--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "koa-static": "^3.0.0",
     "koa-webpack": "^3.0.2",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.3",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
@@ -75,6 +76,7 @@
     "redux-bootstrap": "^1.3.0",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "socket.io": "^2.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
