--- a/package.json
+++ b/package.json
@@ -30,56 +30,56 @@
   "homepage": "https://github.com/romanoffivan/project-lvl4-s235#readme",
   "devDependencies": {
     "babel-core": "^7.0.0-0",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
-    "nodemon": "^1.17.3"
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/node": "^7.0.0-beta.46",
-    "@babel/polyfill": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-react": "^7.0.0-beta.46",
-    "@babel/preset-stage-0": "^7.0.0-beta.46",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.0-beta.2",
-    "bootstrap": "^4.1.0",
-    "classnames": "^2.2.5",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-stage-0": "^7.8.3",
+    "axios": "^0.18.1",
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
-    "debug": "^3.1.0",
+    "debug": "^3.2.6",
     "dotenv": "^4.0.0",
     "faker": "^4.1.0",
-    "jquery": "^3.3.1",
-    "js-cookie": "^2.2.0",
-    "koa": "^2.5.0",
+    "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
+    "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-generic-session": "^2.0.1",
-    "koa-logger": "^3.2.0",
+    "koa-generic-session": "^2.0.4",
+    "koa-logger": "^3.2.1",
     "koa-pug": "^3.0.0-2",
     "koa-router": "^7.4.0",
     "koa-static": "^3.0.0",
     "koa-webpack": "^3.0.2",
-    "lodash": "^4.17.10",
-    "popper.js": "^1.14.3",
-    "react": "^16.3.2",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.3.0",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.12.0",
+    "react-redux": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "redux-bootstrap": "^1.3.0",
-    "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0",
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "socket.io": "^2.1.0",
+    "socket.io": "^2.3.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^2.1.5"
   }
 }
