--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,16 +1,22 @@
 ---
 
-extends:
-  - airbnb
-  - "plugin:react/recommended"
-
-parser: babel-eslint
-
-env:
-  browser: true
-  node: true
-
-rules:
-  import/no-unresolved: true
-  import/extensions: true
-  react/prop-types: 0
+  extends:
+    - airbnb
+    - "plugin:jest/recommended"
+  
+  parser: babel-eslint
+  
+  env:
+    browser: true
+    node: true
+    jest: true
+  
+  settings:
+    import/resolver:
+      - node
+      - webpack
+  
+  rules:
+    import/extensions: 0
+    react/prop-types: 0
+    no-console: 0
