--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "project-lvl4-s235",
-  "version": "0.0.1",
+  "name": "slack-clone",
+  "version": "0.1.2",
   "description": "clone of slack",
   "main": "dist/index.js",
+  "bin": {
+    "slack": "dist/bin/slack.js"
+  },
   "engines": {
-    "node": "9"
+    "node": ">= 13"
   },
   "scripts": {
-    "nodemon": "nodemon",
-    "babel-node": "babel-node",
-    "eslint": "eslint",
     "test": "jest",
-    "webpack": "webpack",
-    "start": "node ./dist/bin/slack.js",
+    "build-server": "babel server --out-dir dist --source-maps inline && cp -r server/views dist/views",
+    "build-app": "npx webpack -p --env production",
     "build": "npm run build-app && npm run build-server",
-    "build-app": "npm run webpack",
-    "build-server": "babel server --out-dir dist --source-maps inline",
+    "start": "dist/bin/slack.js",
     "postinstall": "npm run build"
   },
   "repository": {
@@ -28,58 +27,67 @@
     "url": "https://github.com/romanoffivan/project-lvl4-s235/issues"
   },
   "homepage": "https://github.com/romanoffivan/project-lvl4-s235#readme",
-  "devDependencies": {
-    "babel-core": "^7.0.0-0",
-    "babel-eslint": "^8.2.6",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "nodemon": "^1.19.4"
-  },
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
-    "@babel/polyfill": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
-    "@babel/preset-stage-0": "^7.8.3",
-    "axios": "^0.18.1",
+    "@reduxjs/toolkit": "^1.2.3",
+    "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
-    "css-loader": "^0.28.11",
-    "debug": "^3.2.6",
-    "dotenv": "^4.0.0",
+    "core-js": "^3.6.4",
+    "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
+    "fastify": "^2.12.0",
+    "fastify-formbody": "^3.1.0",
+    "fastify-secure-session": "^1.1.1",
+    "fastify-sensible": "^2.1.1",
+    "fastify-static": "^2.6.0",
+    "formik": "^2.1.4",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
-    "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-generic-session": "^2.0.4",
-    "koa-logger": "^3.2.1",
-    "koa-pug": "^3.0.0-2",
-    "koa-router": "^7.4.0",
-    "koa-static": "^3.0.0",
-    "koa-webpack": "^3.0.2",
     "lodash": "^4.17.15",
-    "popper.js": "^1.16.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "point-of-view": "^3.7.1",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "pug": "^2.0.4",
     "react": "^16.12.0",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-redux": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
     "redux-bootstrap": "^1.3.0",
-    "redux-form": "^7.4.2",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1",
+    "regenerator-runtime": "^0.13.3",
+    "sass-loader": "^8.0.2",
     "socket.io": "^2.3.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^2.1.5"
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.1.2",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "jest": "^25.1.0",
+    "jest-cli": "^25.1.0",
+    "nodemon": "^2.0.2"
   }
 }
